<resources>
    <string name="app_name">AndroidCourses2022</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="settings_fragment">Settings fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="chat_fragment">Chat fragment</string>
    <string name="games_fragment">Games Fragment</string>
    <string name="chat">Chat</string>
    <string name="games">Games</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="search_fragment">Search fragment</string>
    <string name="photos_fragment">Photos fragment</string>
    <string name="videos_fragment">Videos fragment</string>
    <string name="music_fragment">Music fragment</string>
</resources>