<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/gamesFragment"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/games" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />

    <item
        android:id="@+id/profile_graph"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

</menu>